--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             width: 100vw;
         }
         .sum{
-            border: 1px solid blue;
+            /*border: 1px solid blue;*/
             display:flex;
             flex-wrap: wrap;/*usins wrap do not use scroll*/
             align-content: flex-end;
